<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/circle"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_donate"
        android:icon="@drawable/recycle"
        android:title="@string/title_donate" />

    <item
        android:id="@+id/navigation_marketplace"
        android:icon="@drawable/shopping"
        android:title="@string/title_marketplace" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/newspaper"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/circle"
        android:title="@string/title_profile" />
</menu>